# Flow

./: .antigravityignore  .coverage  .env.example  .gitignore  AI_Analyze.bat  AI_English.bat  AI_Enhance.bat  AI_Menu.bat  ARCHITECTURE.md  CHANGELOG.md  CONSTITUTION.md  CONTEXT_HANDOVER.md  DEPLOY_TERMUX.md  DEVELOPMENT_MEMO.md  FIREBASE_STUDIO_SETUP.md  MANIFESTO.md  PROJECT_SUMMARY.md  README.md  RUN_APP.bat  RUN_APP.vbs  SECURITY.md  USAGE_GUIDE.md  User_Operating_Manual_v4.0_final.md  check_models.py  config.py  constitution_vs_workflow.md  database.py  debug_log_2.txt  debug_log_3.txt  gemini_client.py  history.txt  list_models.py  logic.py  main.py  models.py  pc_clipboard.ps1  privacy.py  prompt_registry.py  requirements-termux.txt  requirements.txt  (+8 more)
.agent/: HANDOFF_CONSTRUCTOR.md
.ai/: AI_STUDIO_SECRETARY_PROMPT.md  BRIEFING.md  DEBUG_LOG.md  JULES_TASK.md  PROJECT_CONTEXT.md  SYSTEM_CONTEXT.md
.gemini/: GEMINI.md  rules.md
.jules/: bolt.md  sentinel.md
_archive/: AI_Clipboard.bat  COMPLETE_ARCHIVE.md  TERMUX_SETUP.md  ai_convert.ps1  api.py  app.py  ingest_obsidian.py  workflow_engine.py
data/: config.json  tasks.db-shm  tasks.db-wal
dev_tools/: benchmark_latency.py  secure_push.sh  setup_aliases.ps1  setup_titanium.py  sync.sh
docs/: DESIGN_RAG_VOCABULARY.md  DESIGN_SEMANTIC_PRIVACY.md  http_shortcuts_setup.md  prefetch_templates.md
flet_app/: api_client.py  main.py  pyproject.toml  requirements.txt  test_connection.py
maintenance/: DEBUG_BUILD.md  DEBUG_CONNECTION.md  start_termux.sh  titanium_watcher.sh
prompt-engineering-library/: main.py  (+23 more)
(+89 files in other folders)
