[project]
name = "ai-clipboard-pro"
version = "4.0.0"
description = "AI-powered clipboard text processing"
authors = [
    {name = "Laihuip001", email = "ai-assistant@local.test"}
]
requires-python = ">=3.10"
dependencies = [
    "flet>=0.21.0",
    "httpx>=0.27.0",
]

[tool.flet]
# Flet build configuration
org = "com.titanium"
product = "AI Clipboard Pro"
build_number = 1
description = "AI-powered clipboard text processing"

[tool.flet.android]
# Android-specific settings
package = "com.titanium.aiclipboardpro"
adaptive_icon_background = "#1a1a2e"
# To build APK: flet build apk
